version: 1.02 -a few fixes
